# EquationSolver

./: CMakeLists.txt  README.md
cmake/: System.cmake
src/: CMakeLists.txt
src/core/: types.h
src/core/math/: Matrix.h  greatest_common_divisor.h
src/core/math/numbers/: Rational.cc  Rational.h
test/: CMakeLists.txt
test/core/math/: MatrixTest.cc
